# handy-cpp-components

./: CMakeLists.txt  README.md
.github/workflows/: components-ci.yml
communication/: CMakeLists.txt
communication/messages/key_value_message/: KeyValueMessage.h
communication/mqtt/: CMakeLists.txt
communication/mqtt/include/: MqttPublisherSubscriber.h  PahoMqttClient.h  PahoMqttPublisherSubscriber.h
communication/mqtt/mqtt_client/: MqttClient.h
communication/mqtt/src/: MqttPublisherSubscriber.cpp  PahoMqttClient.cpp  PahoMqttPublisherSubscriber.cpp
communication/publisher_subscriber/: PublisherSubscriber.h
queues/: CMakeLists.txt
queues/fifo_queue/: FifoQueue.h
queues/lifo_queue/: LifoQueue.h
queues/queue/: FifoQueueMechanism.h  GenericQueue.h  LifoQueueMechanism.h  Queue.h  QueueMechanism.h
samples/: CMakeLists.txt  mqtt_publisher_subscriber.cpp
services/: CMakeLists.txt  mqtt_publisher_subscriber.cpp
test/: CMakeLists.txt  FifoQueue_test.cpp  LifoQueue_test.cpp  MqttPublisherSubscriber_test.cpp
test/mocks/: MockMqttClient.h  MockQueue.h
